# spleeter

./: .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  dev.md  envoy.yaml  spleeter-base.dockerfile  spleeter-temp.dockerfile  test.dockerfile
app/: entrypoint.sh  pyproject.toml
app/src/: main.py
app/src/service/: file_processor.py  pub_sub.py  publish_notification.py  token_helper.py
docs/: cloudflare-tunnel.yaml
local/: test-upload.py
tests/: test_token_helper.py
